Bug 36796 - Inconsistent UI of rectangle and ellipse in drawing toolbar.
Summary: Inconsistent UI of rectangle and ellipse in drawing toolbar.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
3.4.0 Beta3
Hardware: Other All
: medium minor
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.1.0
Keywords:
: 57019 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-03 03:58 UTC by Yifan Jiang
Modified: 2017-03-06 21:08 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yifan Jiang 2011-05-03 03:58:37 UTC
Platform: SLED 10 sp3 i586
build info: Libreoffice 3.4 beta3

[Steps]

        1. Open Impress
        2. Enable drawing toolbar from View->Toolbars->Drawing
        3. Click the 4th or the 5th icon (rectangle and ellipse respectively)
        
[Problem]

        It is the Basic shapes icon (with submenu icons) highlighted
        (embossed) after clicking.

        It is expected the top level icon itself got highlighted as other
        icons in the toolbar.

[Extra Information]

        - This is brought by the change of link top icon with
          .uno.BasicShapes.Ellipse instead of legacy .uno.Ellipse
Comment 1 Petr Mladek 2011-05-03 05:32:36 UTC
This bug has been triggered by http://cgit.freedesktop.org/libreoffice/impress/commit/?h=libreoffice-3-4&id=d31b6292b14546ac7b04b4f483b70f68b56412e6

We wanted to use the more powerful ellipse and rectangle implementations even from the main ellipse and rectangle icons. The older implementation did not allow to wrap text according to the shape.
Comment 2 Rainer Bielefeld Retired 2011-05-03 23:14:56 UTC
[Reproducible] with "LibreOffice 3.4Beta3  – WIN7  Home Premium  (64bit) German UI [DEV300m103 (Build:3)]" for DRAW and PRESENTATION, but not for WRITER.

Sounds like an easy hack

I would like to know why WRITER uses different icons in DRAWING toolbar.
Comment 3 Rainer Bielefeld Retired 2011-05-04 00:00:39 UTC
At least it's wrong that 
- highlighted shape button does not show active "Rectangle" or "Ellipse"
- WRITER / CALC do not use this feature 

I have some difficulties to understand this new feature.
Since old OOo days we have had text property "Adjust to contour", what worked fine. I can't find any difference to "Word wrap text in shape" except
- the different Help text 
- that they alternatively work for main ellipse and shape ellipse (I filed
  "Bug 36822 - DRAWING toolbar in WRITER and CALC use different icons from 
   DRAW and IMPRESS"
Comment 4 Petr Mladek 2011-05-04 02:44:12 UTC
I see that (In reply to comment #3)
> At least it's wrong that 
> - highlighted shape button does not show active "Rectangle" or "Ellipse"

It should rather highlight "Rectangle" or "Ellipse" icons and keep the "Basic Shapes" one as is.

> - WRITER / CALC do not use this feature 

I agree that it should be consistent.

> I have some difficulties to understand this new feature.
> Since old OOo days we have had text property "Adjust to contour", what worked
> fine. I can't find any difference to "Word wrap text in shape" except
> - the different Help text 
> - that they alternatively work for main ellipse and shape ellipse (I filed
>   "Bug 36822 - DRAWING toolbar in WRITER and CALC use different icons from 
>    DRAW and IMPRESS"

I see that "Adjust to contour" does not keep the text in a center. It hides that text the is over the shape, ...

I like more the behavior of the Basis Ellipse shape and "Word wrap text in shape".
Also I do not understand why we need two different implementations and set of features. I think that it is just confusing.

Anyway, the change was requested by https://bugzilla.novell.com/show_bug.cgi?id=171052
Comment 5 Julien Nabet 2014-10-14 17:13:57 UTC
On pc Debian x86-64 with 4.3.2 LO Debian package, I don't reproduce this.

Don't hesitate to reopen this tracker if you can reproduce this on a recent LO version (last stable one is 4.3.2).
Comment 6 Commit Notification 2015-07-21 14:37:39 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=74cc3fbc17235f5c0010c363342a9a9adaf85c4e

tdf#36796 Status updates for custom shapes buttons

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Maxim Monastirsky 2017-03-06 21:08:52 UTC
*** Bug 57019 has been marked as a duplicate of this bug. ***